# dfml

./: .gitignore  README.md
cpp/: CMakeLists.txt
cpp/main/: CMakeLists.txt
cpp/main/include/: dfml.h  dfml_data.h  dfml_element.h  dfml_node.h  dfml_parser.h  dfml_value.h
cpp/main/include/dfml/: builder.h  comment.h  data.h  dfml.h  element.h  node.h  parser.h  value.h
cpp/main/src/: builder.cpp  comment.cpp  data.cpp  dfml_data.cpp  dfml_node.cpp  dfml_parser.cpp  dfml_value.cpp  node.cpp  parser.cpp  value.cpp
cpp/test/: CMakeLists.txt
cpp/test/include/: build_test.h  construct_test.h  parse_test.h
cpp/test/src/: dfml_test.cpp
js/main/: builder.js  comment.js  data.js  element.js  node.js  parser.js  value.js
js/test/: builder_test.js  parse_test.js  parsed.dfml  styles.css  test.html
python/dfml/: __init__.py  builder.py  comment.py  data.py  element.py  node.py  parser.py  setup.py  value.py
python/test/: build_test.py  parser_test.py
python/test/dfml/: doubles.dfml  parsing.dfml
